plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromActualAnnotationWithParametersInOneLine/common/common.kt
expect annotation class <!LINE_MARKER("descr='Has actuals in [jvm, js] modules'; targets=[(text=jvm; icon=nodes/Module.svg); (text=js; icon=nodes/Module.svg)]")!>Ann<!>(
        val <!LINE_MARKER("descr='Has actuals in [jvm, js] modules'; targets=[(text=x; container=jvm; icon=nodes/Module.svg); (text=x; container=js; icon=nodes/Module.svg); (text=y; container=jvm; icon=nodes/Module.svg); (text=y; container=js; icon=nodes/Module.svg)]")!>x<!>: Int, val y: String,
        val <!LINE_MARKER("descr='Has actuals in [jvm, js] modules'; targets=[(text=z; container=jvm; icon=nodes/Module.svg); (text=z; container=js; icon=nodes/Module.svg); (text=b; container=jvm; icon=nodes/Module.svg); (text=b; container=js; icon=nodes/Module.svg)]")!>z<!>: Double, val b: Boolean
)
